# SK2_Projekt

./: LICENSE  README.md
CheckersClient/: .gitignore  CheckersClient.pro  circularbuffer.cpp  circularbuffer.h  connectiondialog.cpp  connectiondialog.h  connectiondialog.ui  createroomdialog.cpp  createroomdialog.h  createroomdialog.ui  game.cpp  game.h  game_piece.cpp  game_piece.h  globals.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mockserver.cpp  mockserver.h  resources.qrc  room.cpp  room.h  server_client_messages.h  serverconnection.cpp  serverconnection.h  serverconnectionobject.cpp  serverconnectionobject.h  tcpClient.cpp  tcpClient.h  tcpclient.cpp  tcpclient.h  tcpserverconnection.cpp  tcpserverconnection.h
CheckersClient/gimp_files/: board.xcf  dark_king.xcf  dark_man.xcf  light_king.xcf  light_man.xcf
CheckersServer/: .gitignore  CMakeLists.txt  Doxyfile  circularBuffer.c  circularBuffer.h  circuralBuffer.c  circuralBuffer.h  clientsList.c  clientsList.h  game.c  game.h  main.c  messages.c  messages.h  player.c  player.h  playersList.c  playersList.h  room.c  room.h  roomList.c  roomList.h  server.c  server.h  serverClientCommunication.c  serverClientCommunication.h  serverGame.c  serverGame.h  test.c  test.h
